fix api delete class
